ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiufit-ingress
  labels:
    app: fiufit
    tier: fiufit-ingress
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: fiufit-ingress
  rules:
  - http:
      paths:
      - path: /users/.*/trainings
        pathType: Prefix
        backend:
          service:
            name: trainings-service
            port:
              name: trainings-svc
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              name: users-svc
      - path: /admins
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              name: users-svc
      - path: /trainings
        pathType: Prefix
        backend:
          service:
            name: trainings-service
            port:
              name: trainings-svc
      - path: /goals
        pathType: Prefix
        backend:
          service:
            name: goals-service
            port:
              name: goals-svc
